--- a/AdventOfCode2020/AdventOfCode2020.vcxproj
+++ b/AdventOfCode2020/AdventOfCode2020.vcxproj
@@ -149,6 +149,7 @@
     <Text Include="Day3.txt" />
     <Text Include="Day4.txt" />
     <Text Include="Day5.txt" />
+    <Text Include="Day6.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdventOfCode2020.h" />
