--- a/AdventOfCode2020/AdventOfCode2020.vcxproj.filters
+++ b/AdventOfCode2020/AdventOfCode2020.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Day7.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Day8.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Day1.txt">
@@ -62,6 +65,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Day7.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Day8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
