--- a/AdventOfCode2020/AdventOfCode2020.vcxproj
+++ b/AdventOfCode2020/AdventOfCode2020.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="AdventOfCode2020.cpp" />
     <ClCompile Include="Day7.cpp" />
+    <ClCompile Include="Day8.cpp" />
     <ClCompile Include="Passport.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
@@ -156,6 +157,7 @@
   <ItemGroup>
     <ClInclude Include="AdventOfCode2020.h" />
     <ClInclude Include="Day7.h" />
+    <ClInclude Include="Day8.h" />
     <ClInclude Include="Passport.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
