--- a/AdventOfCode2020/AdventOfCode2020.vcxproj
+++ b/AdventOfCode2020/AdventOfCode2020.vcxproj
@@ -153,6 +153,8 @@
     <Text Include="Day5.txt" />
     <Text Include="Day6.txt" />
     <Text Include="Day7.txt" />
+    <Text Include="Day8.txt" />
+    <Text Include="Day9.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdventOfCode2020.h" />
